dark mode fix

--- a/frontend/src/assets/corner.scss
+++ b/frontend/src/assets/corner.scss
@@ -1,5 +1,11 @@
+@import "variables";
+
 .corner {
     position: fixed;
     right: 20px;
     bottom: 20px;
+    display: none;
+    @media screen and (min-width: $break-large) {
+        display: block;
+    }
 }
