--- a/frontend/src/assets/global.scss
+++ b/frontend/src/assets/global.scss
@@ -81,13 +81,8 @@ svg:hover {
         max-width: 25%;
     }
 }
-.content {
-    flex: 0 0 75%;
-    max-width: 75%;
-}
 .column {
     box-sizing: border-box;
-    min-height: 1px;
     position: relative;
     padding-left: 25px;
     padding-right: 25px;
